# minimal-policykit-agent

./: CMakeLists.txt  authenticationagent.cpp  authenticationagent.h  dialogagent.cpp  dialogagent.h  main.cpp
